tests/invalid/02_unterminated_string.js
// 错误2: 未闭合的字符串
const message = "Hello World;
console.log(message);
